Add config files to use Release Please

--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.google.cloud</groupId>
   <artifactId>google-cloud-aiplatform-fs</artifactId>
-  <version>0.1.0</version>
+  <version>0.1.0</version><!-- {x-version-update:google-cloud-aiplatform-fs:current} -->
   <packaging>jar</packaging>
   <name>Google Cloud Vertex AI Custom SDK for Feature Store</name>
   <parent>
     <groupId>com.google.cloud</groupId>
     <artifactId>google-cloud-aiplatform-parent</artifactId>
-    <version>3.78.0</version><!-- {x-version-update:google-cloud-aiplatform:current} -->
+    <version>3.78.0</version>
   </parent>
 
   <properties>
