--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,6 +6,9 @@
   "bump-minor-pre-major": false,
   "bump-patch-for-minor-pre-major": false,
   "packages": {
-    ".": {}
+    ".": {
+      "release-type": "java-yoshi",
+      "changelog-path": "CHANGELOG.md"
+    }
   }
 }
