--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,9 @@
             --add-opens=java.base/java.io=ALL-UNNAMED
             --add-opens=java.base/java.time=ALL-UNNAMED
           </argLine>
+          <excludes>
+            <exclude>**/*IT.java</exclude>
+          </excludes>
         </configuration>
       </plugin>
       <plugin>
@@ -161,6 +164,24 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>3.3.1</version> <!-- Use a recent version -->
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>integration-test</goal>
+                        <goal>verify</goal>
+                    </goals>
+                </execution>
+            </executions>
+          <configuration>
+            <includes>
+              <include>**/*IT.java</include>
+            </includes>
+          </configuration>
       </plugin>
     </plugins>
   </build>
