--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,7 @@ steps:
   - name: 'gcr.io/cloud-builders/mvn'
     entrypoint: 'mvn'
     # mvn verify does build, run unit tests and integration tests
-    args: ['verify', '-Dclirr.skip=true', '-DskipITs=false', '-DprojectId=$${PROJECT_ID}', '-DfeatureOnlineStoreId=$${FOS_ID}', '-DfeatureViewId=$${FV_ID}']
+    args: ['verify', '-Dclirr.skip=true', '-DskipITs=false', '-DprojectId="$${PROJECT_ID}"', '-DfeatureOnlineStoreId="$${FOS_ID}"', '-DfeatureViewId="$${FV_ID}"']
     secretEnv: ['PROJECT_ID', 'FOS_ID', 'FV_ID']
 
 # Test parameters such as project ID, FOS ID, FV ID are stored in the Secret Manager.
